--- a/pages/Esports.html
+++ b/pages/Esports.html
@@ -11,20 +11,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <!-- css -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Esports</title>
 </head>
 <body>   
     <nav id="navbar">
         <div class="contenedor">
             <div class="logo">
-                <a href="index.html"><img src="img/Logo.png" alt="" /></a>
+                <a href="../index.html"><img src="../img/Logo.png" alt="" /></a>
             </div>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="Esports.html">Esports</a></li>
                 <li><a href="SN.html">Sobre Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="Contacto.html">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -35,28 +35,28 @@
         </div>
     </section>
 
-    <main class="fondo-black">
+    <main class="fondo-black" class="cards">
         <div class="d-flex justify-content-around">
             <div class="card" style="width: 18rem;">
-                <img src="img/logo-lol.png" class="card-img-top" alt="...">
+                <img src="../img/logo-lol.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h2 class="card-title">LoL World Championship</h2>
+                  <h2 class="card-title">League of Legends</h2>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="https://lolesports.com/" class="btn btn-primary" target="_blank">Ir al sitio</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="img/logo-valorant.png" class="card-img-top" alt="...">
+                <img src="../img/logo-valorant.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h2 class="card-title">LoL World Championship</h2>
+                  <h2 class="card-title">Valorant</h2>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="https://valorantesports.com/" class="btn btn-primary" target="_blank">Ir al sitio</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="img/logo-csgo.png" class="card-img-top" alt="...">
+                <img src="../img/logo-csgo.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h2 class="card-title">LoL World Championship</h2>
+                  <h2 class="card-title">CS:GO</h2>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="https://www.hltv.org/" class="btn btn-primary" target="_blank">Ir al sitio</a>
                 </div>
@@ -64,6 +64,31 @@
         </div>  
     </main>
 
+    <section id="cambios" class="fondo-gray">
+        <div class="contenedor">
+            <div class="wrap">
+                <div class="caja caja-1 fondo-black">
+                    <h2 class="forma-3">No sabes por donde empezar?</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elit arcu arcu congue cursus. Quam erat libero
+                        rhoncus nunc, nunc eget ut. Rhoncus nibh diam aenean ultricies quis placerat. Massa arcu id aliquam, enim
+                        porta congue purus amet, enim. Maecenas fringilla gravida quam sit enim sagittis at accumsan. Vel, erat
+                        nisi consectetur enim risus. Mattis sagittis laoreet donec risus, pharetra est neque.
+                    </p>
+                </div>
+                <div class="caja caja-2 fondo-white">
+                    <h2 class="forma-3">Aqui podras aprender lo basico de los juegos presentados!</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam consequatur sit saepe aperiam minima
+                        molestiae sed qui cumque! Et molestiae obcaecati rerum doloremque corporis beatae quia illum aliquid
+                        similique ipsum nam aut molestias perferendis exercitationem voluptatum adipisci veniam, reiciendis error
+                        ex quis! Fuga vel explicabo dolore odit corrupti. Deserunt, tempore!
+                    </p>
+                    <a href="Introduccion/introduccion.html">Iniciemos!</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     
