--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
     <nav id="navbar">
         <div class="contenedor">
             <div class="logo">
-                <a href="index.html"><img src="img/Logo.png" alt="" /></a>
+                <a href="index.html"><img src="img/Logo.png" alt=""/></a>
             </div>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="Esports.html">Esports</a></li>
-                <li><a href="SN.html">Sobre Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="pages/Esports.html">Esports</a></li>
+                <li><a href="pages/SN.html">Sobre Nosotros</a></li>
+                <li><a href="pages/Contacto.html">Contacto</a></li>
             </ul>
         </div>
     </nav>
-
-    <section id="presentacion">
-        <div class="contenedor">
-            <div class="presentacion-flex">
-                <h1 class="forma-1">Esports para dummies</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate tempora nam impedit quis incidunt. Expedita eius ad sint ipsa, similique nesciunt consectetur velit quis voluptatum delectus doloribus! Ut, ratione error!</p>
+    <header>
+        <section id="presentacion">
+            <div class="contenedor">
+                <div class="presentacion-flex">
+                    <h1 class="forma-1">Esports para dummies</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate tempora nam impedit quis incidunt. Expedita eius ad sint ipsa, similique nesciunt consectetur velit quis voluptatum delectus doloribus! Ut, ratione error!</p>
+                </div>
             </div>
-        </div>
-    </section>
-
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
+        </section>
+    </header>
+    <div id="carouselExampleControls" class="carousel slide d-flex justify-content-center" data-bs-ride="carousel">
+        <div class="carousel-inner d-flex justify-content-center">
+          <div class="carousel-item active ">
             <img src="img/img-carru-uno.jpg" class="d-block w-25" alt="...">
           </div>
           <div class="carousel-item">
