--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,20 +12,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <!-- css -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Pre entrega 02</title>
 </head>
 <body>
     <nav id="navbar">
         <div class="contenedor">
             <div class="logo">
-                <a href="index.html"><img src="img/Logo.png" alt="" /></a>
+                <a href="../index.html"><img src="../img/Logo.png" alt="Logo" /></a>
             </div>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="Esports.html">Esports</a></li>
                 <li><a href="SN.html">Sobre Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="Contacto.html">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -42,7 +42,7 @@
                         minus facilis, beatae, eos perferendis sint nulla, cumque quibusdam aliquam iste ex itaque?
                     </p>
                     <div class="logo">
-                        <img src="img/Logo-linkedin.png" alt="">
+                        <img src="../img/Logo-linkedin.png" alt="">
                     </div>
                 </div>
                 <div class="contacto-flex-box">
@@ -53,7 +53,7 @@
                         minus facilis, beatae, eos perferendis sint nulla, cumque quibusdam aliquam iste ex itaque?
                     </p>
                     <div class="logo">
-                        <img src="img/logo-insta.jpg" alt="">
+                        <img src="../img/logo-insta.jpg" alt="">
                     </div>
                 </div>
                 <div class="contacto-flex-box">
@@ -64,7 +64,7 @@
                         minus facilis, beatae, eos perferendis sint nulla, cumque quibusdam aliquam iste ex itaque?
                     </p>
                     <div class="logo">
-                        <img src="img/logo-gmail.png" alt="">
+                        <img src="../img/logo-gmail.png" alt="">
                     </div>
                 </div>
             </div>
